fixed issue with hamburger menu not functioning on home page: z-index issue.

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -24,6 +24,7 @@
 
 .hamburger-menu {
   display: none;
+  z-index: 1000;
 }
 
 .menu-toggle {
@@ -33,7 +34,11 @@
   padding: 1rem;
   cursor: pointer;
   position: relative;
-  z-index: 3;
+  z-index: 1000;
+}
+
+.menu-toggle.expanded {
+  z-index: 5;
 }
 
 .hamburger {
@@ -112,6 +117,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  z-index: 98;
 }
 
 .navigation_item {
@@ -149,7 +155,7 @@
 .navigation_link {
   text-decoration: none;
   padding: 1rem 0;
-  z-index: 10;
+  z-index: 5;
   color: var(--white);
   transition: color 0.2s;
   position: relative;
@@ -173,7 +179,7 @@
     position: fixed;
     top: 1rem;
     right: 1rem;
-    z-index: 100;
+    z-index: 1000;
     opacity: 0.9;
   }
 
@@ -188,7 +194,7 @@
     background-color: var(--blue);
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
-    z-index: 99;
+    z-index: 3;
   }
 
   .navigation.expanded .navigation_list {
